force-app/main/default/objects/Shop_Retail_Detail__c/Shop_Retail_Detail__c.object-meta.xml
<CustomObject>
    <label>Intellegence</label>
    <nameField>
        <displayFormat>SRD-{YYYY}{MM}{DD}{00000000}</displayFormat>
        <label>销售数据编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intellegence</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>