force-app/main/default/objects/Shop_Retail_Detail__c/fields/Brands__c.field-meta.xml
<CustomField>
    <fullName>Brands__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Intellegence</relationshipLabel>
    <relationshipName>Intellegence</relationshipName>
    <type>Lookup</type>
</CustomField>