force-app/main/default/objects/Shop_Retail_Detail__c/fields/CampaignDescription__c.field-meta.xml
<CustomField>
    <fullName>CampaignDescription__c</fullName>
    <label>Campaign Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>