force-app/main/default/objects/Shop_Retail_Detail__c/fields/CampaignType__c.field-meta.xml
<CustomField>
    <fullName>CampaignType__c</fullName>
    <label>Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Extender Warranty</fullName>
            </value>
            <value>
                <fullName>Promotional gift</fullName>
            </value>
            <value>
                <fullName>Free installments</fullName>
            </value>
            <value>
                <fullName>Free Shipping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>