force-app/main/default/objects/Shop_Retail_Detail__c/fields/CompetitiveProduct__c.field-meta.xml
<CustomField>
    <fullName>CompetitiveProduct__c</fullName>
    <label>竞品型号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>