force-app/main/default/objects/Shop_Retail_Detail__c/fields/CompetitorInformation__c.field-meta.xml
<CustomField>
    <fullName>CompetitorInformation__c</fullName>
    <formula>IF( ISBLANK( HisenseShopRetailDetail__c ), Id, HisenseShopRetailDetail__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitor Information</label>
    <type>Text</type>
</CustomField>