force-app/main/default/objects/Shop_Retail_Detail__c/fields/CP_Brand__c.field-meta.xml
<CustomField>
    <fullName>CP_Brand__c</fullName>
    <label>竞品品牌</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PANASONIC</fullName>
            </value>
            <value>
                <fullName>SONY</fullName>
            </value>
            <value>
                <fullName>SHARP</fullName>
            </value>
            <value>
                <fullName>TOSHIBA</fullName>
            </value>
            <value>
                <fullName>TCL</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>其它</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>