force-app/main/default/objects/Shop_Retail_Detail__c/fields/CrebitDiscount__c.field-meta.xml
<CustomField>
    <fullName>CrebitDiscount__c</fullName>
    <formula>IF( NOT(AND(ISNULL( CrebitPrice__c ),ISNULL( WhitePrice__c ))),
CrebitPrice__c / WhitePrice__c,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crebit Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>