force-app/main/default/objects/Shop_Retail_Detail__c/fields/CrebitPrice__c.field-meta.xml
<CustomField>
    <fullName>CrebitPrice__c</fullName>
    <label>Crebit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>