force-app/main/default/objects/Shop_Retail_Detail__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Intelligence</relationshipName>
    <type>Lookup</type>
</CustomField>