force-app/main/default/objects/Shop_Retail_Detail__c/fields/DebitPrice__c.field-meta.xml
<CustomField>
    <fullName>DebitPrice__c</fullName>
    <label>Debit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>