force-app/main/default/objects/Shop_Retail_Detail__c/fields/DiscountPrice__c.field-meta.xml
<CustomField>
    <fullName>DiscountPrice__c</fullName>
    <label>折扣金额</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>