force-app/main/default/objects/Shop_Retail_Detail__c/fields/HisenseShopRetailDetail__c.field-meta.xml
<CustomField>
    <fullName>HisenseShopRetailDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>海信产品门店价格调查</label>
    <referenceTo>Shop_Retail_Detail__c</referenceTo>
    <relationshipName>ComtitiveShopRetailDetails</relationshipName>
    <type>Lookup</type>
</CustomField>