force-app/main/default/objects/Shop_Retail_Detail__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipName>Intelligence</relationshipName>
    <type>Lookup</type>
</CustomField>