force-app/main/default/objects/Shop_Retail_Detail__c/fields/NewProduct__c.field-meta.xml
<CustomField>
    <fullName>NewProduct__c</fullName>
    <label>New Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>