force-app/main/default/objects/Shop_Retail_Detail__c/fields/Point__c.field-meta.xml
<CustomField>
    <fullName>Point__c</fullName>
    <label>返点(%)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1%</fullName>
            </value>
            <value>
                <fullName>5%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>15%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>