force-app/main/default/objects/Shop_Retail_Detail__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>售价</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>