force-app/main/default/objects/Shop_Retail_Detail__c/fields/ProductInformation__c.field-meta.xml
<CustomField>
    <fullName>ProductInformation__c</fullName>
    <label>Product Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>