force-app/main/default/objects/Shop_Retail_Detail__c/fields/ProductModel__c.field-meta.xml
<CustomField>
    <fullName>ProductModel__c</fullName>
    <formula>IF(  RecordType.DeveloperName ==&apos;PromoterSaleData&apos; ,Product__r.Series__c,  CompetitiveProduct__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>产品型号</label>
    <type>Text</type>
</CustomField>