force-app/main/default/objects/Shop_Retail_Detail__c/fields/Research__c.field-meta.xml
<CustomField>
    <fullName>Research__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research</label>
    <referenceTo>Research__c</referenceTo>
    <relationshipLabel>Intelligence</relationshipLabel>
    <relationshipName>Intelligence</relationshipName>
    <type>Lookup</type>
</CustomField>