force-app/main/default/objects/Shop_Retail_Detail__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>门店</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipName>Shop_Sales_Retail</relationshipName>
    <type>Lookup</type>
</CustomField>