force-app/main/default/objects/Shop_Retail_Detail__c/fields/WhitePrice__c.field-meta.xml
<CustomField>
    <fullName>WhitePrice__c</fullName>
    <label>White Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>