force-app/main/default/objects/Shop_Retail_Detail__c/recordTypes/CompetiveSaleData.recordType-meta.xml
<RecordType>
    <fullName>CompetiveSaleData</fullName>
    <active>true</active>
    <label>竞品销售数据</label>
</RecordType>