force-app/main/default/objects/Shop_Retail_Detail__c/recordTypes/PromoterSaleData.recordType-meta.xml
<RecordType>
    <fullName>PromoterSaleData</fullName>
    <active>true</active>
    <label>门店销售数据</label>
</RecordType>