force-app/main/default/objects/Shop_Retail_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>ReportDate__c</columns>
    <columns>Shop__c</columns>
    <columns>ProductModel__c</columns>
    <columns>Price__c</columns>
    <columns>DiscountPrice__c</columns>
    <columns>Point__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CURRENCY_ISO_CODE</field>
        <operation>equals</operation>
        <value>JPY</value>
    </filters>
    <label>全部</label>
    <sharedTo>
        <roleAndSubordinatesInternal>JP_FIN</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>JP_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>