force-app/main/default/objects/Shop_Retail_Detail__c/listViews/All_Chile_Intelligence.listView-meta.xml
<ListView>
    <fullName>All_Chile_Intelligence</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>ReportDate__c</columns>
    <columns>Shop__c</columns>
    <columns>ProductModel__c</columns>
    <columns>Price__c</columns>
    <columns>DiscountPrice__c</columns>
    <columns>Point__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CURRENCY_ISO_CODE</field>
        <operation>equals</operation>
        <value>CLP</value>
    </filters>
    <label>All Chile Intelligence</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Chile_KAM</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Chile_Marketing_Manager</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>