force-app/main/default/objects/Shop_Retail_Detail__c/listViews/SA_Intelligence.listView-meta.xml
<ListView>
    <fullName>SA_Intelligence</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>ReportDate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Shop__c</columns>
    <columns>ProductModel__c</columns>
    <columns>Price__c</columns>
    <columns>DiscountPrice__c</columns>
    <columns>Point__c</columns>
    <columns>Market__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Hisense South Africa</value>
    </filters>
    <label>SA Intelligence</label>
    <sharedTo>
        <roleAndSubordinatesInternal>South_Africa_CE_PL</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>